--- a/Segmentation3D/Segmentation3D.vcxproj
+++ b/Segmentation3D/Segmentation3D.vcxproj
@@ -99,9 +99,9 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_WINDOWS;CMAKE_INTDIR="Debug";_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;ITK_IO_FACTORY_REGISTER_MANAGER;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_WINDOWS;CMAKE_INTDIR="Debug";_SCL_SECURE_NO_WARNINGS;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(VTK_INCLUDE_DIR);$(ITK_INCLUDE_DIR);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(VTK_INCLUDE_DIR);$(ITK_INCLUDE_DIR);E:\Segemntation\misInteractiveSegmentation\Header;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
@@ -152,8 +152,8 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Header\ImageType.h" />
     <ClInclude Include="MyAlgorithm3d.h" />
-    <ClInclude Include="MyCallback3D.h" />
     <ClInclude Include="MyInteractionStyle3D.h" />
     <ClInclude Include="MySpeedFunction3D.h" />
     <ClInclude Include="Reslicer.h" />
