--- a/Segmentation3D/Segmentation3D.vcxproj.filters
+++ b/Segmentation3D/Segmentation3D.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClInclude Include="MyAlgorithm3d.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyCallback3D.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="MyInteractionStyle3D.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -37,6 +34,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Reslicer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\ImageType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
