get frst result

--- a/Segmentation3D/Segmentation3D.vcxproj.filters
+++ b/Segmentation3D/Segmentation3D.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="..\Header\ImageType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Header\Segmentation3D\MySpeedFunction3D.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
