--- a/Segmentation3D/Segmentation3D.vcxproj
+++ b/Segmentation3D/Segmentation3D.vcxproj
@@ -153,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\ImageType.h" />
+    <ClInclude Include="..\Header\Segmentation3D\MySpeedFunction3D.h" />
     <ClInclude Include="MyAlgorithm3d.h" />
     <ClInclude Include="MyInteractionStyle3D.h" />
     <ClInclude Include="Reslicer.h" />
