--- a/misViewer/misViewer.vcxproj
+++ b/misViewer/misViewer.vcxproj
@@ -77,7 +77,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>..\Header\Adapters;..\Header\BusinessEntities;..\Header\ApplicationBusinessRules;..\Header\ExtLibWrappers;../header;$(ITK_INCLUDE_DIR);$(BOOST_INCLUDE_DIR);$(GLEW_INCLUDE_DIR);$(VTK_INCLUDE_DIR);$(MISEXT_INCLUDE_DIR);$(MISEXT_INCLUDE_DIR)\tgt;$(DIRECT_SHOW_SAMPLES_INCLUDE_DIR);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\Header\Adapters;..\Header\BusinessEntities;..\Header\ApplicationBusinessRules;..\Header\ExtLibWrappers;../header;$(ITK_INCLUDE_DIR);$(BOOST_INCLUDE_DIR);$(GLEW_INCLUDE_DIR);$(VTK_INCLUDE_DIR);$(MISEXT_INCLUDE_DIR);$(MISEXT_INCLUDE_DIR)\tgt;$(DIRECT_SHOW_SAMPLES_INCLUDE_DIR);$(GDCM_INCLUDE_DIR);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>
       </DisableSpecificWarnings>
       <AdditionalOptions>/Zm300 </AdditionalOptions>
